	-Also, the menu is moving up and to the left so you can see the whole thing until I resize it for the game.

//Juri Kiin 2/29/2016 10:07
	- Added move method: makes character move around the screen without boarders at the edge of the window.
	- Also added pause method. Press P to pause and will resume via button (Not implemented)
	- Added Enemy.cs -- Has paramaterized constructor for the enemy attributes.

//James Friedenberg 3/2/2016 2:26pm
	-Created class for Buttons
	-Attempted to implement buttons into the pause menu
	-Loaded seperate Texture Files for the button assets so I could give the rectangles that represent the buttons 
	their own coordinates

//Dustin Knowlton 2/29/2016 11:30 
	-Added Camera.cs
	-Camera functions not yet implemented

//James Friedenberg 3/4/2016 4:58pm
	-Created rectangles to represent the buttons in the pause menu
	-Loaded png content to give the button rectangles a texture representation
	-Made if statements for the buttons changing appearance when mouse is over them

//Dustin Knowlton 3/4/2016 5:10pm
	-Started work on combat in enemy class with PlayerAttack function
	-also added a few attributes to Enemy.cs

//Juri Kiin 3/7/16 10:40 am
	- Added Finite state machine to game1.cs
	- Added singlekeyPress method to use for toggling UI
	- Made the player unable to move if the game is paused.
	- Made player.cs which loads player position and texture and stats from outside the game1 class.

//James Friedenberg 3/7/2016 10:56am
	-Loaded title screen into game and got it hooked up to the menu game state
	-Spacebar changes state from menu to walk
	-Removed unneeded code and img files from the project

//Juri Kiin 3/8/16 11:50 PM
	- Added code to switch into combat mode to test (until enemies are in the level)
	- Added major framework for blocking system.
	- Loaded in arrow textures and added them to a list.