@@ -44,3 +44,7 @@
 	- Added code to switch into combat mode to test (until enemies are in the level)
 	- Added major framework for blocking system.
 	- Loaded in arrow textures and added them to a list.
+
+//Dustin Knowlton 3/9/16 4:20 PM
+	- Blaze it
+	- Camera fully added, except for actual map draw statement (in but not correct, commented out)
